# asyncio-pubsub-lab

./: Makefile  README.md  docker-compose.yaml  env.sample  otel-collector-config.yaml  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 73a096648a2f_.py
src/: __main__.py  command.py  query.py
src/db/: conn.py  models.py
src/pubsub_emulator/: consumer.py  produce.py  producer.py
src/telemetry/: __init__.py  config.py
src/workers/: consumer.py  task.py
