[tool.poetry]
name = "asyncio-pubsub-lab"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-pubsub = "^2.19.1"
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
pytz = "^2024.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
