[tool.poetry]
name = "asyncio-pubsub-lab"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-pubsub = "^2.19.1"
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
pytz = "^2024.1"
python-decouple = "^3.8"
structlog = "^24.1.0"
psycopg2-binary = "^2.9.9"
opentelemetry-distro = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.22.0"
opentelemetry-instrumentation-system-metrics = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-aiohttp-client = "^0.43b0"
aiohttp = "^3.9.3"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-instrumentation-asyncpg = "^0.43b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
